Fixed an issue where breadcrumbs were not wrapping in mobile (#826)

--- a/packages/Breadcrumb/src/breadcrumb.scss
+++ b/packages/Breadcrumb/src/breadcrumb.scss
@@ -65,6 +65,7 @@
     .ids-breadcrumb__list {
         align-items: center;
         display: flex;
+        flex-flow: wrap;
         letter-spacing: var(--ids-breadcrumb-letter-spacing);
         list-style: none;
         margin: 0;
